新增 request data的字段 #2

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,7 @@ name: Devops CI
 on:
   push:
     branches:
-      - "ci_*"
-      - "master"
+      - "build_*"
   pull_request:
     branches:
       - "master"
