请求的源ip放在扩展表中 #8 日志查询启用认证鉴权 #9

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,13 +3,7 @@ name: Devops CI
 on:
   push:
     branches:
-      - "build_*"
-  pull_request:
-    branches:
-      - "master"
-    types:
-      - opened
-      - closed
+      - "build_test_*"
 
 env:
   IMAGE_VERSION: 0.0.1-alpha.ci
